<resources>
    <string name="app_name">beAlive</string>
    <string name="intro_slogan">життя швидко плине,\nтож встигай реалізовувати свої мрії,\nдосягай мети, живи, доки не склеїв ласти</string>
    <string name="hint">hint</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="e_mail">або використайте e-mail</string>
    <string name="text_reg_google">Увійдіть за допомогою облікового запису</string>
    <string name="todo">TODO</string>
</resources>
